[package]
name = "e"
version = "0.1.0"
authors = ["piotr"]
edition = "2018"

[profile.release]
debug = true
#opt-level = 3
opt-level = 'z'  # Optimize for size.
panic = 'abort'
lto = true
codegen-units = 1

[dependencies]
flate2 = "1.0"
#nc = "0.4.7"
bstr = "0.2"
mailparse = "0.10.1"
htmlescape = "0.3.1"
august = "^2"
term_size = "0.3.1"
rayon = "1.6.1"
parking_lot = "0.12.1"
mimalloc = { version = "0.1.32", default-features = false }
tokio = { package = "tokio", version = "1.23.1", features = ["macros", "fs", "rt-multi-thread", "parking_lot"] }

#[[bin]]
#path = "src/test.rs"
